Criado o endpoint que possibilita obter todos os eventos que foram cadastrados, documentaçao atualizada e pequena modificaçao no modelo de eventos.
